k8s/namespace-rbac.yaml
gapiVersion: v1
kind: Namespace
metadata:
  name: feedback-system
  labels:
    name: feedback-system
